[package]
name = "frame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.10.0"
image = { version = "0.24.6", features = ["jpeg"] }
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
log = "0.4.17"
postgres = { version = "0.19.5", features = ["with-uuid-1"] }
rand = "0.8.5"
route-recognizer = "0.3.1"
serde = { version = "1.0.158", features = ["derive"] }
tera = { version = "1.18.1", default-features = false }
tiny_http = "0.12.0"
ureq = { version = "2.6.2", features = ["json"] }
url = "2.3.1"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
