[package]
name = "photo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
postgres = { version = "0.19.5", features = ["with-uuid-1"] }
serde = { version = "1.0.158", features = ["derive"] }
tiny_http = "0.12.0"
ureq = { version = "2.6.2", features = ["json"] }
url = "2.3.1"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
