[package]
name = "photo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
lazy_static = "1.4.0"
log = "0.4.22"
postgres = { version = "0.19.7" }
serde = { version = "1.0.203", features = ["derive"] }
tiny_http = "0.12.0"
ureq = { version = "2.9.7", features = ["json"] }
url = "2.5.2"
